k8s/services/media/app/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 10095
        runAsGroup: 10095
        supplementalGroups:
          - 105 # render
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
            - name: render
              mountPath: /dev/dri/renderD129
          securityContext:
            privileged: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: render
          hostPath:
            path: /dev/dri/renderD129
      nodeSelector:
        k8s.as212024.net/role: media
      tolerations:
        - key: k8s.as212024.net/role
          operator: Equal
          value: media
          effect: NoExecute
