k8s/services/media/app/jellyfin/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: eg-http-bar
      namespace: core-eg
      sectionName: https
  hostnames:
    - jellyfin.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: jellyfin
          port: 80
